2 September 2009: Wouter
	- TRAFFIC keyword for testbound. Simplifies test generation.
	  ${range lower val upper} to check probe timeout values.
	- test with 5011-prepublish rollover and revocation.
	- fix revocation of RR for autotrust, stray exclamation mark.

1 September 2009: Wouter
	- testbound variable arithmetic.
	- autotrust probe time is randomised.
	- autotrust: the probe is active and does not fetch from cache.

31 August 2009: Wouter
	- testbound variable processing.

28 August 2009: Wouter
	- fixup unbound-control lookup to print forward and stub servers.

27 August 2009: Wouter
	- autotrust: mesh answer callback is empty.

26 August 2009: Wouter
	- autotrust probing.
	- iana portlist updated.

25 August 2009: Wouter
	- fixup memleak in trust anchor unsupported algorithm check.
	- iana portlist updated.
	- autotrust options: add-holddown, del-holddown, keep-missing.
	- autotrust store revoked status of trust points.
	- ctime_r compat definition.
	- detect yylex_destroy() in configure.
	- detect SSL_get_compression_methods declaration in configure.
	- fixup DS lookup at anchor point with unsigned parent.
	- fixup DLV lookup for DS queries to unsigned domains.

24 August 2009: Wouter
	- cleaner memory allocation on exit. autotrust test routines.
	- free all memory on program exit, fix for ssl and flex.

21 August 2009: Wouter
	- autotrust: debug routines. Read,write and conversions work.

20 August 2009: Wouter
	- autotrust: save and read trustpoint variables.

19 August 2009: Wouter
	- autotrust: state table updates.
	- iana portlist updated.

17 August 2009: Wouter
	- autotrust: process events.

17 August 2009: Wouter
	- Fix so that servers are only blacklisted if they fail to reply 
	  to 16 queries in a row and the timeout gets above 2 minutes.
	- autotrust work, split up DS verification of DNSKEYs.

14 August 2009: Wouter
	- unbound-control lookup prints out infra cache information, like RTT.