@@ -1,3 +1,7 @@
+3 September 2009: Wouter
+	- Got a patch from Luca Bruno for libunbound support on windows to
+	  pick up the system resolvconf nameservers and hosts there.
+
 2 September 2009: Wouter
 	- TRAFFIC keyword for testbound. Simplifies test generation.
 	  ${range lower val upper} to check probe timeout values.
